- Create chat form and enable message posting of messages - Create chatform.scss and add style for the chatbox component - Ensure that the chatbox is alway visible - Finishes #166115846

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,9 +1,11 @@
 @import 'variables';
+@import 'globals';
 @import 'mixins';
 @import 'signup';
 @import 'dashboard';
 @import 'logout';
-@import 'globals';
+@import 'chatform';
+
 
 body {
   color: rgb(85, 81, 81);
@@ -171,7 +173,7 @@ div#showcase {
 }
 
 #dashboard-header {
-  height: 40px;
+  height: $navbarHeight;
   background-color: black;
 }
 
